task07/kompose/db-etcd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: db-etcd
  name: db-etcd
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db-etcd
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/etcd-stack: "true"
        io.kompose.service: db-etcd
    spec:
      containers:
        - env:
            - name: ALLOW_NONE_AUTHENTICATION
              value: "yes"
            - name: ETCDCTL_API
              value: "3"
            - name: ETCD_ADVERTISE_CLIENT_URLS
              value: http://etcd:2379
          image: bitnami/etcd:3.3.27
          name: db-etcd
          resources: {}
          volumeMounts:
            - mountPath: /bitnami/etcd
              name: etcd-data
      restartPolicy: Always
      volumes:
        - name: etcd-data
          persistentVolumeClaim:
            claimName: etcd-data
status: {}
