task07/kompose/etcd_stack-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: etcd-stack
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/etcd-stack: "true"
  podSelector:
    matchLabels:
      io.kompose.network/etcd-stack: "true"
