task07/kompose/stack-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: stack
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/stack: "true"
  podSelector:
    matchLabels:
      io.kompose.network/stack: "true"
